@@ -1,3 +1,8 @@
+2010-05-11  Miguel de Icaza  <miguel@novell.com>
+
+	* src/gunicode.c: Pull the Windows.h header when G_OS_WIN32 is
+	defined. 
+
 2010-05-11  Atsushi Enomoto  <atsushi@ximian.com>
 
 	* Makefile.am : do not try to build test on windows (fails).
